# TakiOS

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  setup.sh
backend/: README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_memory_tables.py  cd4b5f442600_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: api.py
backend/app/api/endpoints/: agents.py  analyzer.py  grade.py
backend/app/core/ai/: client.py  router.py
backend/app/core/auth/: models.py  (+4 more)
backend/app/data/: __init__.py  curriculum_data.py  engineering_content_data.py  engineering_harnessing_data.py  engineering_question_data.py  seed_content.py  seed_curriculum.py
backend/app/db/: session.py
backend/app/middleware/: audit_log.py  rate_limit.py
backend/app/prompts/: agent_system_prompt.json  dream_prompt.json  grading_prompt.json
backend/app/schemas/: submission.py
backend/app/services/: agent_orchestrator.py  agent_parser.py  grading_service.py  project_analyzer.py
backend/app/shared/: base_model.py  exceptions.py  pagination.py
backend/app/storage/: minio_service.py
backend/app/tasks/: dream_motor.py  worker.py
backend/tests/: conftest.py  test_agent_orchestrator.py  test_auth_service.py  test_collaboration_impact_routes.py  test_dream_motor.py  test_grade.py  test_health.py  test_learning_core_routes.py  test_memory_service.py  test_model_router.py  test_project_routes.py  test_project_security.py  test_quality_compliance_routes.py  test_services_unit.py
(+196 files in other folders)
